--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
                 </div>
             </div>
         </section>
-          <section id="test-drive" class="s-test-drive js-snap-item js-navigator-item">
+          <section id="test-drive" class="d-none s-test-drive js-snap-item js-navigator-item">
 
             <div class="container">
                 <div class="s-specifications__content" id="s-test-drive__container">
@@ -2073,7 +2073,7 @@
     </main>
     <!-- ... -->
 
-    <section id="thank-you-popup">
+    <section  id="thank-you-popup">
 
         <!-- Modal -->
         <div class="" id="thankYouModalCenter">
@@ -2205,7 +2205,7 @@
                 infinite: true,
                 dots: false
             }
-	    },
+        },
         ]
     });
     $('.slider-for-2').slick({
@@ -2246,7 +2246,7 @@
                 slidesToShow: 1,
                 infinite: true,
             }
-	    },
+        },
         ]
     });
     $('.slider-nav').slick({
@@ -2258,7 +2258,7 @@
         centerMode: true,
         // centerPadding: '100px',
         focusOnSelect: true,
-	    // focusOnChange: true,
+        // focusOnChange: true,
         arrows: false,
         swipeToSlide: true,
         touchMove: true,
@@ -2273,7 +2273,7 @@
                 slidesToShow: 4,
                 infinite: true
             }
-	    },
+        },
         {
             breakpoint: 1024,
             settings: {
@@ -2294,14 +2294,14 @@
                 slidesToShow: 5,
                 dots: false
             }
-	    },
+        },
         {
             breakpoint: 375,
             settings: {
                 slidesToShow: 3,
                 // dots: true
             }
-	    }]
+        }]
     });
     $('.slider-nav-1').slick({
         // lazyLoad: 'ondemand',
@@ -2312,7 +2312,7 @@
         // centerMode: true,
         // centerPadding: '100px',
         focusOnSelect: true,
-	    focusOnChange: true,
+        focusOnChange: true,
         arrows: false,
         swipeToSlide: true,
         touchMove: true,
@@ -2327,14 +2327,14 @@
                 slidesToShow: 3,
                 infinite: true
             }
-	    },
+        },
         {
             breakpoint: 1299,
             settings: {
                 slidesToShow: 3,
                 infinite: true
             }
-	    },
+        },
         {
             breakpoint: 1100,
             settings: {
@@ -2355,11 +2355,11 @@
                 slidesToShow: 5,
                 dots: false
             }
-	    },
+        },
         {
             breakpoint: 375,
             slidesToShow: 3
-	    }]
+        }]
     });
     $('.slider-nav-2').slick({
         lazyLoad: 'ondemand',
@@ -2370,7 +2370,7 @@
         centerMode: true,
         // centerPadding: '100px',
         focusOnSelect: true,
-	    // focusOnChange: true,
+        // focusOnChange: true,
         arrows: false,
         swipeToSlide: true,
         touchMove: true,
@@ -2385,7 +2385,7 @@
                 slidesToShow: 2,
                 infinite: true
             }
-	    },
+        },
         {
             breakpoint: 1024,
             settings: {
@@ -2405,7 +2405,7 @@
             settings: {
                 slidesToShow: 2,
             }
-	    },
+        },
     ]
     });
     $('.slider-nav-3').slick({
@@ -2417,7 +2417,7 @@
         centerMode: true,
         // centerPadding: '100px',
         focusOnSelect: true,
-	    // focusOnChange: true,
+        // focusOnChange: true,
         arrows: false,
         swipeToSlide: true,
         touchMove: true,
