--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
                 </div>
             </div>
         </section>
-          <section id="test-drive" class="d-none s-test-drive js-snap-item js-navigator-item">
+          <section id="test-drive" style="display: none;"class="d-none s-test-drive js-snap-item js-navigator-item">
 
             <div class="container">
                 <div class="s-specifications__content" id="s-test-drive__container">
